<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LinkActivity"
    tools:showIn="@layout/app_bar_link">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/colorPrimarytext"
        android:padding="8dp"
        android:layout_marginBottom="4dp"
        android:onClick="link1"
        android:background="@drawable/list_background"
        android:text="@string/link_1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/colorPrimarytext"
        android:padding="8dp"
        android:layout_marginBottom="4dp"
        android:onClick="link2"
        android:background="@drawable/list_background"
        android:text="@string/link_2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/colorPrimarytext"
        android:padding="8dp"
        android:onClick="link3"
        android:layout_marginBottom="4dp"
        android:background="@drawable/list_background"
        android:text="@string/link_3"/>

</LinearLayout>