<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="?android:attr/actionBarSize"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/app_bar_main">

        <TextView
            android:id="@+id/upper_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="4dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimarytext"
            android:text="Joy of Computing" />

        <GridLayout
            android:id="@+id/upper_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/upper_head"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                android:background="@drawable/list_background"
                android:onClick="openAll"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="4dp"
                    android:padding="4dp"
                    android:src="@drawable/list_video_icon" />

                <TextView
                    android:id="@+id/head1main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image1"
                    android:text="@string/title_activity_all_videos"
                    android:textColor="@color/colorPrimarytext"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/head1main"
                    android:text="@string/visit_all_desc"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                android:background="@drawable/list_background"
                android:onClick="openWeek"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="4dp"
                    android:padding="4dp"
                    android:src="@drawable/list_week_icon" />

                <TextView
                    android:id="@+id/head2main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image2"
                    android:text="@string/title_activity_week_wise"
                    android:textColor="@color/colorPrimarytext"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/head2main"
                    android:text="@string/visit_week_desc"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                android:background="@drawable/list_background"
                android:onClick="openChapter"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="4dp"
                    android:padding="4dp"
                    android:src="@drawable/list_chapter_icon" />

                <TextView
                    android:id="@+id/head3main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image3"
                    android:text="@string/title_activity_chapter_wise"
                    android:textColor="@color/colorPrimarytext"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/head3main"
                    android:text="@string/visit_chapter_desc"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                android:background="@drawable/list_background"
                android:onClick="openWeb"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/image4"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="4dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_http" />

                <TextView
                    android:id="@+id/head4main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image4"
                    android:text="@string/visit_website"
                    android:textColor="@color/colorPrimarytext"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/head4main"
                    android:text="@string/visit_web_desc"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

            </RelativeLayout>

        </GridLayout>

        <TextView
            android:id="@+id/lower_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/upper_grid"
            android:layout_alignParentStart="true"
            android:padding="4dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimarytext"
            android:text="Data Structures" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lower_head"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                android:background="@drawable/list_background"
                android:onClick="openAllB"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/image5"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="4dp"
                    android:padding="4dp"
                    android:src="@drawable/list_video_icon" />

                <TextView
                    android:id="@+id/head5main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image5"
                    android:text="@string/title_activity_all_videos"
                    android:textColor="@color/colorPrimarytext"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/head5main"
                    android:text="@string/visit_all_desc"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                android:background="@drawable/list_background"
                android:onClick="openLink"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/image6"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="4dp"
                    android:padding="4dp"
                    android:src="@drawable/list_week_icon" />

                <TextView
                    android:id="@+id/head6main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image6"
                    android:text="@string/title_activity_link"
                    android:textColor="@color/colorPrimarytext"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/head6main"
                    android:text="@string/visit_link_desc"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                android:background="@drawable/list_background"
                android:onClick="openChapterB"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/image7"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="4dp"
                    android:padding="4dp"
                    android:src="@drawable/list_chapter_icon" />

                <TextView
                    android:id="@+id/head7main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image7"
                    android:text="@string/title_activity_chapter_wise"
                    android:textColor="@color/colorPrimarytext"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/head7main"
                    android:text="@string/visit_chapter_desc"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                android:background="@drawable/list_background"
                android:onClick="openWebB"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/image8"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="4dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_http" />

                <TextView
                    android:id="@+id/head8main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image8"
                    android:text="@string/visit_website"
                    android:textColor="@color/colorPrimarytext"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/head8main"
                    android:text="@string/visit_web_desc"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

            </RelativeLayout>

        </GridLayout>

    </RelativeLayout>

</ScrollView>